# MVA_DELIRES_project

./: .gitignore  README.md  TODO.md  download_model.sh  downloads.sh  my_requirements.txt  pyproject.toml  requirements.txt  setup.sh  temp.py
delires/: __main__.py  blur_kernels.py  data.py  data.sh  download_ffhq.py  main.py  metrics.py  params.py  plot_results.ipynb  visualization.ipynb
delires/diffpir/: my_ddpir_deblur.py
delires/diffpir/utils/: delires_utils.py
delires/diffusers/: diffuser.py  register.py
delires/diffusers/diffpir/: configs.py  diffpir_configs.py  diffpir_deblur.py  diffpir_diffuser.py  download.sh  main_ddpir.py  main_ddpir_deblur.py  main_ddpir_inpainting.py  main_ddpir_sisr.py  my_ddpir_deblur.py  my_ddpir_sisr.py
delires/diffusers/dps/: dps_configs.py  dps_deblur.py  dps_diffuser.py
delires/fid/: fid_score.py
delires/kernels/: gaussian_kernel_05.npy
delires/methods/: diffuser.py  register.py
delires/methods/diffpir/: diffpir_configs.py  diffpir_deblur.py  diffpir_diffuser.py  diffpir_inpaint.py  diffpir_inpainting.py  diffpir_sisr.py  main_ddpir.py  main_ddpir_deblur.py  main_ddpir_inpainting.py  main_ddpir_sisr.py
delires/methods/dps/: dps_configs.py  dps_deblur.py  dps_diffuser.py  dps_inpainting.py  dps_sampling.py
delires/methods/dps_pigdm_utils/: utils_agem.py  (+2 more)
delires/operators/: box_masks.npy  motion_kernel_example.npy  random_masks.npy
delires/utils/: blur_kernels.py  download_matlab_kernels.py  matlab_kernels.py  operators.py  resize_ffhq.py  utils.py  utils_image.py  utils_logger.py  utils_plots.py  utils_sisr.py
(+241 files in other folders)
